--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -21,11 +21,56 @@ nav{
 .NavItems  a{
     cursor: pointer;
 }
-.ContributeButton{
-    margin-top: 1rem;
-    margin-right: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-}
+
+.button {
+    padding: 15px 20px;
+    font-size: 16px;
+    background: transparent;
+    border:1px solid black;
+    border-radius: 10px;
+    position: relative;
+    transform: translate(10px, 20px);
+    backdrop-filter: blur(5px);
+    color: #000000;
+    z-index: 1;
+  }
+  
+  .button::after,
+  .button::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    z-index: -99999;
+    transition: all .4s;
+  }
+  
+  .button::after {
+    transform: translate(0%, 0%);
+    width: 100%;
+    height: 100%;
+    background: #4ef910;
+    opacity: 0.5;
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+  }
+  
+  .button::before {
+    transform: translate(-10px, -20px);
+  }
+  
+  .button:hover::after {
+    transform: translate(-17%, -20%);
+  }
+  
+  .button:hover::before {
+    border-radius: 10px;
+    transform: translate(0, 0);
+    width: 100%;
+    height: 100%;
+  }
+  
+  .button:active::before {
+    transition: 0s;
+    transform: translate(0, 0);
+  }
