New logo designed and updated

--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -8,7 +8,9 @@ nav{
 .Logo{
     padding-top: 1.5rem;
     padding-left: 1.5rem;
-    width: 150px;
+    width: 220px;
+    height: 30px;
+    
 }
 .NavItems{
     padding-top: .5rem;
