added new font size and color for navbar items and added mouse pointer to contribute button

--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -22,6 +22,9 @@ nav{
 }
 .NavItems  a{
     cursor: pointer;
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
 }
 
 .button {
@@ -35,6 +38,7 @@ nav{
     backdrop-filter: blur(5px);
     color: #000000;
     z-index: 1;
+    cursor: pointer;
   }
   
   .button::after,
